--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 before_script:
   - psql -c 'create database mstwjs_test;' -U postgres
-script: 'bundle exec guard-jasmine --server-timeout=60'
+script: 'bundle exec rake guard:jasmine'
